# gabrielogard

./: Cargo.toml  README.md  resume.json
content/blog/: first.md
src/: lib.rs  main.rs
src/handlers/: blog.rs  home.rs
src/models/: blog_post.rs  mod.rs  resume.rs
src/templates/: renderer.rs
src/utils/: markdown.rs
static/: styles.css
templates/: base.html  blog.html  blog_content.html  blog_post.html  blog_post_content.html  home.html  home_content.html
